Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -558,26 +558,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Walla Walla Valley',\n",
-       " 'Marakesh',\n",
-       " 'Albuquerque',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls']"
+       "['Walla Walla Valley', 'Marakesh', 'Albuquerque']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities[4:9]"
+    "top_travel_cities[4:7]"
    ]
   },
   {
